Add cross-compilation toolchains for macOS, Linux, and Windows
- Introduced x86_64-apple-darwin.cmake for macOS x64 cross-compilation.
- Added x86_64-linux-gnu.cmake for targeting x86_64 Linux systems.
- Created x86_64-w64-mingw32.cmake for Windows x64 using MinGW-w64.
- Implemented x86_64-w64-mingw64-msys2.cmake for MSYS2 toolchain support.
- Updated MIGRATION-GUIDE.md to reflect changes in the build system and CMake presets.
- Unified clangd configuration scripts for cross-platform compatibility.
- Simplified build commands and developer workflow in documentation.

--- a/.gitignore
+++ b/.gitignore
@@ -257,6 +257,10 @@ settings/
 # Development and Testing
 # =============================================================================
 
+# Demo and test files
+demo/
+*.pdf
+
 # Test results
 test_results/
 *.xml
