feat: Add comprehensive architecture documentation for SAST Readium
- Introduced a new architecture overview document detailing design principles, architecture patterns, core components, key subsystems, data flow, and extension points.
- Documented MVC pattern implementation, command pattern, service locator, event bus, factory pattern, and plugin system.
- Included detailed descriptions of core components like Application Entry, Delegates, Search Engine, PDF Rendering, Caching System, and Logging System.

audit: Complete component audit report for missing functionality

- Conducted a thorough audit of the SAST Readium codebase, identifying and implementing 3 critical missing components: StateManager, CommandFactory, and PluginInterface.
- Verified all components for architecture compliance and successful compilation.

docs: Verify and update documentation for accuracy

- Verified all code examples in documentation against current implementation.
- Updated README.md, CHANGELOG.md, and other documentation files to reflect recent changes and additions.
- Ensured all internal and external links are valid and accurate.

docs: Establish build artifact management guidelines

- Created a document outlining the management of build artifacts, specifically `compile_commands.json` and clangd configuration.
- Explained the automatic generation and integration of build artifacts within the CMake build system.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,32 +32,14 @@ add_subdirectory(app)
 
 # Add tests if enabled
 if(BUILD_TESTING)
+    # Enable testing at top level (required for CTest)
+    enable_testing()
     setup_testing_environment()
     add_subdirectory(tests)
 endif()
 
-# Copy compile_commands.json to project root for clangd integration
-if(CMAKE_EXPORT_COMPILE_COMMANDS)
-    # Create a custom target that runs after CMake generation
-    add_custom_target(copy_compile_commands
-        COMMAND ${CMAKE_COMMAND} -E copy_if_different
-            "${CMAKE_BINARY_DIR}/compile_commands.json"
-            "${CMAKE_SOURCE_DIR}/compile_commands.json"
-        BYPRODUCTS "${CMAKE_SOURCE_DIR}/compile_commands.json"
-        COMMENT "Copying compile_commands.json to project root for clangd"
-        VERBATIM
-    )
-
-    # Add a post-build step to the main project that copies the file
-    # This will run whenever any target is built successfully
-    add_custom_command(TARGET copy_compile_commands POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy_if_different
-            "${CMAKE_BINARY_DIR}/compile_commands.json"
-            "${CMAKE_SOURCE_DIR}/compile_commands.json"
-        COMMENT "Updating compile_commands.json in project root"
-        VERBATIM
-    )
-endif()
+# Setup clangd integration
+setup_clangd_integration()
 
 # Print build configuration summary
 print_build_summary()
