Add comprehensive unit tests for SearchEngine functionality
- Implemented a new test suite for the SearchEngine class, covering various aspects including initialization, document management, search functionality, caching, background processing, and performance metrics.
- Added tests for basic search operations, edge cases, incremental search features, and signal emissions.
- Included tests for handling special characters and Unicode searches.
- Ensured proper cleanup and resource management in test cases.

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -72,7 +72,14 @@ jobs:
         run: |
           # Use cached package lists if available
           sudo apt update
-          sudo apt install -y ${{ matrix.packages }}
+          sudo apt install -y ${{ matrix.packages }} ccache
+
+      # ccache for faster rebuilds
+      - name: Setup ccache
+        uses: hendrikmuhs/ccache-action@v1.2
+        with:
+          key: ${{ matrix.cache_key }}-ccache
+          max-size: 500M
 
       - name: Verify dependencies
         run: |
